# examples

./: .gitignore  README.md
ai/: .env.example  README.md
cloud/azure/: README.md
cloud/azure/azure-py-storage/: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_main.py
cloud/k8s/: README.md
container/nginx-basic/: README.md  docker-compose.yml
container/nginx-db-minio-flask/: .env.example  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
container/nginx-db-minio-flask/web/: Dockerfile  pyproject.toml
container/nginx-db-minio-flask/web/src/: app.py
container/nginx-db-minio-flask/web/src/services/: db.py  storage.py
container/nginx-db-minio-flask/web/src/templates/: index.html
container/nginx-db-minio-html/: .env.example  README.md  docker-compose.yml
container/nginx-db-minio-wagtail/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml
container/nginx-db-minio-wagtail/web/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
container/nginx-db-minio-wagtail/web/src/: app.py  manage.py
container/nginx-db-minio-wagtail/web/src/minopy/: storage_backends.py  wsgi.py
container/nginx-db-minio-wagtail/web/src/minopy/settings/: base.py  dev.py
container/nginx-db-minio-wagtail/web/src/minopy/templates/: base.html
container/nginx-db-minio-wagtail/web/src/services/: storage.py
container/nginx-db-minio-wagtail/web/src/templates/: index.html
container/traefik-basic/: README.md  docker-compose.yml
data/analytics/: README.md
doc/db/: postgres.md
programming/python/: rovnice.py
(+61 files in other folders)
