[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-storages[boto3]>=1.14.6",
    "psycopg[binary]>=3.2.6",
    "python-dotenv>=1.1.0",
    "wagtail>=6.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
